[package]
name = "live_wire"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "src/main.rs"

[lib]
name = "live_wire"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.12"
colored = "3.1.1"
libc = "0.2.182"
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
