[package]
name = "live_wire"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "src/main.rs"

[lib]
name = "live_wire"
path = "src/lib.rs"

[dependencies]
colored = "3.1.1"
crossbeam-channel = "0.5.15"
libc = "0.2.182"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
